--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@remixicon/react": "^4.2.0",
+    "@sanity/client": "^7.13.2",
+    "@sanity/image-url": "^2.0.2",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.24",
     "next": "^14.2.35",
